@@ -3,6 +3,7 @@ package kz.aday.bot.bot.handler.callbackHandlers;
 
 import java.time.LocalDate;
 import java.util.List;
+import java.util.Optional;
 import java.util.stream.Collectors;
 import kz.aday.bot.bot.handler.AbstractHandler;
 import kz.aday.bot.model.Order;
@@ -20,15 +21,16 @@ public class WhoComesTodayAlmataCallbackHandler extends AbstractHandler implemen
 
   @Override
   public void handle(CallbackQuery callback, AbsSender sender) throws Exception {
-    if (isUserExistAndReady(callback)) {
-      User user = userService.findById(getChatId(callback).toString());
+    Optional<User> optionalUser = findReadyUserByChatId(callback);
+    if (optionalUser.isPresent()) {
+      User user = optionalUser.get();
       // Кто приходит сегодня = заказы сделанные вчера
       LocalDate yesterday = LocalDate.now().minusDays(1);
       List<Order> orders =
           orderService.findAllOnDate(yesterday).stream()
               .filter(o -> o.getCity() == user.getCity())
               .filter(o -> o.getStatus() == Status.READY)
-              .collect(Collectors.toList());
+              .toList();
       String names = orders.stream().map(Order::getUsername).collect(Collectors.joining(", "));
       if (names.isBlank()) {
         sendMessage(user, NOBODY_COMES, getMessageId(callback), sender);
